--- a/index.html
+++ b/index.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unión Libertaria Catamarca</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Unión libertaria, Union, Catamarca, javier milei, milei presidente, libertad, libertarios, liberal, presidente, Argentina">
+  <link rel="icon" type="text/css" href="img/union libertaria.ico">
+  <title>UNION LIBERTARIA CATAMARCA</title>
     <style>
         * {
             color: white;
         }
-        body {
+                    body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 20px;
             background-color: rgb(139, 5, 139); /* Fondo violeta */
         }
-        canvas {
-            border: 1px solid #ffffff;
-            width: 100%;
-            height: 300px;
-        }
-        button {
-            color:black;
-            margin: 10px;
-            padding: 10px 15px;
-            font-size: 16px;
-        }
-        path {
-            color: #ffffff;
-        }
-    </style>
+            </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Firma</title>
 </head>
 <body>
-    <h1>Unión Libertaria Catamarca</h1>
-        <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+  <h1>Unión Libertaria Catamarca</h1>
+  <div class="quienes">
+    <p>
+      AFLIATE:<br>
+      Una vez guardada la firma, enviarla por whatsapp jujnto con la del dni.
+  </p>
+              <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
  width="100.000000pt" height="100.000000pt" viewBox="0 0 440.000000 440.000000"
  preserveAspectRatio="xMidYMid meet">
 <metadata>
@@ -185,63 +183,88 @@ l88 -57 -18 -30 c-10 -16 -23 -27 -29 -25 -7 3 -58 34 -114 71 -56 37 -108 69
 14 -59 39 -29 32 -42 39 -69 38 -18 -1 -59 -3 -90 -5z"/>
 </g>
 </svg>
-    <canvas id="signatureCanvas"></canvas>
-    <br>
-    <button id="clearCanvas">Borrar</button>
-    <button id="saveCanvas">Guardar</button>
 
-    <script>
-        const canvas = document.getElementById('signatureCanvas');
-        const ctx = canvas.getContext('2d');
-        let drawing = false;
+  <h1>Firma aquí</h1>
+  <div id="signature-pad" style="border: 1px solid #000; width: 400px; height: 200px;">
+      <canvas id="canvas"></canvas>
+  </div>
+  <button id="clear">Borrar</button>
+  <button id="save">Guardar Imagen</button>
+  
+  <script>
+      const canvas = document.getElementById('canvas');
+      const ctx = canvas.getContext('2d');
+      let drawing = false;
+  
+      // Establecer el tamaño del canvas
+      canvas.width = 400; // Ancho fijo
+      canvas.height = 200; // Alto fijo
+      ctx.fillStyle = '#fff'; // Color de fondo blanco
+      ctx.fillRect(0, 0, canvas.width, canvas.height); // Rellenar el fondo
+  
+      function startDrawing(e) {
+          drawing = true;
+          draw(e);
+      }
+  
+      function stopDrawing() {
+          drawing = false;
+          ctx.beginPath();
+      }
+  
+      function draw(e) {
+          if (!drawing) return;
+  
+          const rect = canvas.getBoundingClientRect();
+          const x = (e.clientX || e.touches[0].clientX) - rect.left;
+          const y = (e.clientY || e.touches[0].clientY) - rect.top;
+  
+          ctx.lineWidth = 2;
+          ctx.lineCap = 'round';
+          ctx.strokeStyle = '#000'; // Color de la firma
+  
+          ctx.lineTo(x, y);
+          ctx.stroke();
+          ctx.beginPath();
+          ctx.moveTo(x, y);
+      }
+  
+      // Eventos para mouse
+      canvas.addEventListener('mousedown', startDrawing);
+      canvas.addEventListener('mouseup', stopDrawing);
+      canvas.addEventListener('mousemove', draw);
+  
+      // Eventos para toque
+      canvas.addEventListener('touchstart', (e) => {
+          e.preventDefault();
+          startDrawing(e.touches[0]);
+      });
+      canvas.addEventListener('touchend', stopDrawing);
+      canvas.addEventListener('touchmove', (e) => {
+          e.preventDefault();
+          draw(e.touches[0]);
+      });
+  
+      document.getElementById('clear').addEventListener('click', () => {
+          ctx.clearRect(0, 0, canvas.width, canvas.height);
+          ctx.fillStyle = '#fff'; // Rellenar el fondo nuevamente
+          ctx.fillRect(0, 0, canvas.width, canvas.height);
+      });
+  
+      document.getElementById('save').addEventListener('click', () => {
+          const dataURL = canvas.toDataURL('image/png', 1.0); // Cambia a 'image/png' para PNG
+          const link = document.createElement('a');
+          link.href = dataURL;
+          link.download = 'firma.png'; // Cambia la extensión a .png
+          link.click();
+      });
+  </script>
 
-        canvas.width = window.innerWidth * 0.9; // Ajustar el tamaño del canvas
-        canvas.height = 300;
+  </div>
+<a href="https://wa.me/543834322324?text=Me%20contacto%20desde%20la%20página%20Unión%20Libertaria" target="_blank"><svg class="whatsapp" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1219.547 1225.016"><path fill="#E0E0E0" d="M1041.858 178.02C927.206 63.289 774.753.07 612.325 0 277.617 0 5.232 272.298 5.098 606.991c-.039 106.986 27.915 211.42 81.048 303.476L0 1225.016l321.898-84.406c88.689 48.368 188.547 73.855 290.166 73.896h.258.003c334.654 0 607.08-272.346 607.222-607.023.056-162.208-63.052-314.724-177.689-429.463zm-429.533 933.963h-.197c-90.578-.048-179.402-24.366-256.878-70.339l-18.438-10.93-191.021 50.083 51-186.176-12.013-19.087c-50.525-80.336-77.198-173.175-77.16-268.504.111-278.186 226.507-504.503 504.898-504.503 134.812.056 261.519 52.604 356.814 147.965 95.289 95.36 147.728 222.128 147.688 356.948-.118 278.195-226.522 504.543-504.693 504.543z"/><linearGradient id="a" x1="609.77" x2="609.77" y1="1190.114" y2="21.084" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#20b038"/><stop offset="1" stop-color="#60d66a"/></linearGradient><path fill="url(#a)" d="M27.875 1190.114l82.211-300.18c-50.719-87.852-77.391-187.523-77.359-289.602.133-319.398 260.078-579.25 579.469-579.25 155.016.07 300.508 60.398 409.898 169.891 109.414 109.492 169.633 255.031 169.57 409.812-.133 319.406-260.094 579.281-579.445 579.281-.023 0 .016 0 0 0h-.258c-96.977-.031-192.266-24.375-276.898-70.5l-307.188 80.548z"/><path fill="#FFF" fill-rule="evenodd" d="M462.273 349.294c-11.234-24.977-23.062-25.477-33.75-25.914-8.742-.375-18.75-.352-28.742-.352-10 0-26.25 3.758-39.992 18.766-13.75 15.008-52.5 51.289-52.5 125.078 0 73.797 53.75 145.102 61.242 155.117 7.5 10 103.758 166.266 256.203 226.383 126.695 49.961 152.477 40.023 179.977 37.523s88.734-36.273 101.234-71.297c12.5-35.016 12.5-65.031 8.75-71.305-3.75-6.25-13.75-10-28.75-17.5s-88.734-43.789-102.484-48.789-23.75-7.5-33.75 7.516c-10 15-38.727 48.773-47.477 58.773-8.75 10.023-17.5 11.273-32.5 3.773-15-7.523-63.305-23.344-120.609-74.438-44.586-39.75-74.688-88.844-83.438-103.859-8.75-15-.938-23.125 6.586-30.602 6.734-6.719 15-17.508 22.5-26.266 7.484-8.758 9.984-15.008 14.984-25.008 5-10.016 2.5-18.773-1.25-26.273s-32.898-81.67-46.234-111.326z" clip-rule="evenodd"/><path fill="#FFF" d="M1036.898 176.091C923.562 62.677 772.859.185 612.297.114 281.43.114 12.172 269.286 12.039 600.137 12 705.896 39.633 809.13 92.156 900.13L7 1211.067l318.203-83.438c87.672 47.812 186.383 73.008 286.836 73.047h.255.003c330.812 0 600.109-269.219 600.25-600.055.055-160.343-62.328-311.108-175.649-424.53zm-424.601 923.242h-.195c-89.539-.047-177.344-24.086-253.93-69.531l-18.227-10.805-188.828 49.508 50.414-184.039-11.875-18.867c-49.945-79.414-76.312-171.188-76.273-265.422.109-274.992 223.906-498.711 499.102-498.711 133.266.055 258.516 52 352.719 146.266 94.195 94.266 146.031 219.578 145.992 352.852-.118 274.999-223.923 498.749-498.899 498.749z"/></svg></a>
 
-        canvas.addEventListener('mousedown', startDrawing);
-        canvas.addEventListener('mouseup', stopDrawing);
-        canvas.addEventListener('mousemove', draw);
-        canvas.addEventListener('touchstart', startDrawing);
-        canvas.addEventListener('touchend', stopDrawing);
-        canvas.addEventListener('touchmove', draw);
-
-        function startDrawing(e) {
-            drawing = true;
-            ctx.beginPath();
-            ctx.moveTo(getX(e), getY(e));
-        }
-
-        function stopDrawing() {
-            drawing = false;
-            ctx.closePath();
-        }
-
-        function draw(e) {
-            if (!drawing) return;
-            ctx.lineTo(getX(e), getY(e));
-            ctx.stroke();
-        }
-
-        function getX(e) {
-            return e.touches ? e.touches[0].clientX - canvas.offsetLeft : e.clientX - canvas.offsetLeft;
-        }
-
-        function getY(e) {
-            return e.touches ? e.touches[0].clientY - canvas.offsetTop : e.clientY - canvas.offsetTop;
-        }
-
-        document.getElementById('clearCanvas').addEventListener('click', () => {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-        });
-
-        document.getElementById('saveCanvas').addEventListener('click', () => {
-            const dataURL = canvas.toDataURL();
-            const link = document.createElement('a');
-            const timestamp = new Date().toISOString().replace(/[-:.]/g, ''); // Formato de timestamp
-            link.href = dataURL;
-            link.download = `firma_${timestamp}.png`; // Nombre único para cada firma
-            link.click();
-        });
-    </script>
+<footer class="footer">
+    <p>Copyright: Unión Libertaria Catamarca, todos los derechos reservados. - Web designer: El Toro Calderazzi <a href="mailto:https://vidayfuturo3@gmail.com">(vidayfuturo3@gmail.com)</a></p>
+  </footer>
 </body>
 </html>
