--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
             margin: 20px;
             background-color: rgb(139, 5, 139); /* Fondo violeta */
         }
+        button {
+            color:black;
+            margin: 10px;
+            padding: 10px 15px;
+            font-size: 16px;
+        }
+        .whatsapp {
+  position: fixed;
+  width: 40px;
+	height: 40px;
+	bottom: 75px;
+	right: 10px;
+}
             </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -185,7 +198,7 @@ l88 -57 -18 -30 c-10 -16 -23 -27 -29 -25 -7 3 -58 34 -114 71 -56 37 -108 69
 </svg>
 
   <h1>Firma aquí</h1>
-  <div id="signature-pad" style="border: 1px solid #000; width: 400px; height: 200px;">
+  <div id="signature-pad" style="border: 1px solid #000; width: 400px; height: 200px; margin: 0 auto;">
       <canvas id="canvas"></canvas>
   </div>
   <button id="clear">Borrar</button>
