--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <meta name="description" content="Unión libertaria, Union, Catamarca, javier milei, milei presidente, libertad, libertarios, liberal, presidente, Argentina">
-  <link rel="icon" type="text/css" href="img/union libertaria.ico">
-  <title>UNION LIBERTARIA CATAMARCA</title>
+  <link rel="icon" type="text/css" href="/union libertaria.ico libertaria.ico">
+  <title>ULC</title>
     <style>
         * {
             color: white;
@@ -15,26 +15,25 @@
                     body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 20px;
-            background-color: rgb(71, 6, 112); /* Fondo violeta */
+            margin: -10px 5px;
+            background-color: rgb(59, 4, 93); /* Fondo violeta */
         button {
             color:white;
-            background-color: rgb(94, 14, 94);
-            margin: 15px;
+            background-color: rgb(48, 22, 48);
+            margin: -10px 0px -10px 0px;
             border-width: 2px;
             border-color: black;
-            
-            padding: 10px 15px;
-            font-size: 16px;
+            padding: 10px 10px;
+            font-size: 15px;
             border-radius: 20px;
             cursor: pointer;
         }
         .whatsapp {
   position: fixed;
-  width: 40px;
-	height: 40px;
+  width: 45px;
+	height: 45px;
 	bottom: 75px;
-	right: 10px;
+	right: 30px;
 }
             </style>
   <meta charset="UTF-8">
@@ -42,21 +41,20 @@
   <title>Firma</title>
 </head>
 <body>
- <u><h1>Unión Libertaria Catamarca</h1></u>
-  <div class="quienes">
-    <h2>AFILIATE!</h2>
-	  <h2>Firmá aquí:</h2>
-  <div id="signature-pad" style="border: 1px solid #000; width: 400px; height: 300px; margin: 0 auto;">
+ <u><h2>Unión Libertaria Catamarca</h2></u>
+  <class="quienes">
+      <h4> ►<u>PASO 1:</u> Firme en el recuadro:</h4>
+  <div id="signature-pad" style="border: 2px solid #000; width: 300px; height: 250px; margin: 0 auto;">
       <canvas id="canvas"></canvas>
   </div>
-  <p>
-    ►PASO 1: Firme en el recuadro.<br>
-    ►PASO 2: Presione guardar.<br>
-    ►PASO 3: Enviar por whatsapp la imagen guardada.<br>
-    ►PASO 4: Enviar por whatsapp los 2 lados del dni.
-</p>
-  <button id="clear">Borrar firma</button>
-  <button id="save">Guardar Imagen</button>
+  <h4>   
+    ►<u>PASO 2:</u> Presione guardar firma.<br>    
+</h4>
+  <button id="clear">BORRAR FIRMA</button>
+  <button id="save">GUARDAR FIRMA</button>
+  <h4>►<u>PASO 3:</u> Enviar por whatsapp la imagen guardada.<br>
+    ►<u>PASO 4:</u> Enviar por whatsapp los 2 lados del dni.
+</h4>
     <div style="background-color: white; width: 100.000000pt; height: 100.000000pt; margin: 0 auto">
     <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
  width="100.000000pt" height="100.000000pt" viewBox="0 0 440.000000 440.000000"
@@ -239,8 +237,8 @@ l88 -57 -18 -30 c-10 -16 -23 -27 -29 -25 -7 3 -58 34 -114 71 -56 37 -108 69
       let drawing = false;
   
       // Establecer el tamaño del canvas
-      canvas.width = 400; // Ancho fijo
-      canvas.height = 300; // Alto fijo
+      canvas.width = 300; // Ancho fijo
+      canvas.height = 250; // Alto fijo
       ctx.fillStyle = '#fff'; // Color de fondo blanco
       ctx.fillRect(0, 0, canvas.width, canvas.height); // Rellenar el fondo
   
